# ZytleBot

./: .gitignore  README.md  gazebo.txt  test_usbcam_cpp.cpp  シミュレータ使い方.txt
3Dmodel/PCam/: pcam_TurtleBot3.stl
3Dmodel/Webcam/: webcam_TurtleBot3.stl  webcam_TurtleBot3_longtail.stl
FPGA_template/: CMakeLists.txt  package.xml
FPGA_template/src/: FpgaConnection.cpp  forest.h  ros_realtime.cpp
autonomous_no_nodelet/: CMakeLists.txt  autorace.yaml  calibration.yml
autonomous_no_nodelet/launch/: yosen.launch
autonomous_nodelet/: CMakeLists.txt  autorace.json  autorace.xml  autorace.yaml  honsen_dir.txt  package.xml  signal.json
autonomous_nodelet/include/signal_lib/: forest.h  realtime2.cpp  xcalc_hog_hw.h
autonomous_nodelet/launch/: autorace.launch
autorace/: package.xml  yosen_map.txt
autorace/include/autorace/: nodelet_autorace.h  nodelet_pcam.h  nodelet_signal.h  nodelet_usbcam.h
autorace/include/signal_lib/: window_candidate.h
autorace/src/: autorace.cpp
catkin_ws/src/cv_bridge_tutorial/src/: cv_bridge_tutorial (4 番目のコピー).cpp  cv_bridge_tutorial (別のコピー).cpp  cv_bridge_tutorial.cpp
catkin_ws/src/image_test1/: CMakeLists.txt  package.xml
catkin_ws/src/opencv_test/: CMakeLists.txt  autorace.yaml  package.xml
control_system/: CMakeLists.txt  package.xml
control_system/src/: zytlebot.cpp
cv_bridge_tutorial/: CMakeLists.txt  package.xml
cv_bridge_tutorial/src/: cv_bridge_tutorial (5 番目のコピー).cpp  cv_bridge_tutorial.cpp
iyaiya_robot/: CMakeLists.txt  package.xml
iyaiya_robot/nodes/: iyaiya_robot.cpp
iyaiya_robot/scripts/: cv_bridge_tutorial.py
iyaiya_robot/src/: iyaiya_robot.cpp
opencv_test/: bending_direction.txt  package.xml
pcam_sub/: CMakeLists.txt  package.xml
pcam_sub/nodes/: pcam_sub.cpp
red_signal/: package.xml
red_signal/src/: benchmark.cpp  feature.h  forest_origin.h  ros_realtime.cpp  xcalc_hog.c
red_signal_detection/: CMakeLists.txt
red_signal_detection/src/: realtime.cpp  window_candidate.h  xcalc_hog.h  xcalc_hog_sinit.c
signal_camera/: CMakeLists.txt  package.xml
signal_camera/src/: hw.h  xcalc_hog_linux.c
turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
turtlebot3_simulations/turtlebot3_gazebo/worlds/: FPT.world
ubuntu_pcam/: CMakeLists.txt  package.xml
ubuntu_pcam/nodes/: ubuntu_pcam.cpp
usb_cam_pub/launch/: red_signal.launch
usb_cam_pub/src/: ros_realtime.cpp
zybo_autorace/: CMakeLists.txt  autorace.yaml  bending_direction.txt  honsen1_dir.txt  honsen2.yaml  honsen2_dir.txt  honsen3_dir.txt  honsen_dir.txt  honsen_map.txt  package.xml
zybo_autorace/image_yaml/type1/: autorace.yaml
zybo_autorace/launch/: autorace.launch
zybo_autorace/src/: zybo_autorace.cpp  zybo_autorace_pc.cpp
zybo_opencv/src/: cv_bridge_tutorial (3番目のコピー).cpp  cv_bridge_tutorial (コピー).cpp  zybo_opencv.cpp  zybo_opencv_old.cpp
zybo_pcam/: CMakeLists.txt  package.xml
zybo_pcam/launch/: pcam-test.launch
zybo_pcam/nodes/: test.cpp  zybo_pcam.cpp
zybo_sub/: CMakeLists.txt  package.xml
zybo_sub/nodes/: zybo_sub.cpp
(+29 files in other folders)
